Made ClearScreen in ConsoleHelper working