@@ -3,13 +3,12 @@ package helpers;
 import java.io.IOException;
 
 public class ConsoleHelper {
-    public final static void clearConsole() throws IOException {
-        final String os = System.getProperty("os.name");
-
-        if (os.contains("Windows")) {
-            Runtime.getRuntime().exec("cls");
-        } else {
-            Runtime.getRuntime().exec("clear");
-        }
+    public final static void clearConsole() throws InterruptedException, IOException {
+        try {
+            if (System.getProperty("os.name").contains("Windows"))
+                new ProcessBuilder("cmd", "/c", "cls").inheritIO().start().waitFor();
+            else
+                Runtime.getRuntime().exec("clear");
+        } catch (IOException | InterruptedException ex) {}
     }
 }
